Fixed: First tab cut off

--- a/userChrome.css
+++ b/userChrome.css
@@ -60,7 +60,7 @@
   flex: 1 !important;
 }
 
-#tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs]) > #tabbrowser-arrowscrollbox > .tabbrowser-tab[first-visible-unpinned-tab] {
+.tabbrowser-tab[first-visible-unpinned-tab] {
   margin-inline-start: 0px !important;
 }
 
